...
            app:contentScrim="@color/purple_500"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/img_detail_hightlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/desc_image_highlight"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
...
